p2/app_folder/app3/app3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
spec:
  selector:
    matchLabels:
      app: app-three
  replicas: 1
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
        - name: app-three 
          image: nginx:1.23.1
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: app-three-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: app-three-volume
          configMap:
            name: app-three-configmap
