p2/app_folder/app3/app3_service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
    protocol: TCP
  selector:
    app: app-three
