p2/app_folder/app3/app3_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-three-ingress
spec:
  rules:
  - host:
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-three
              port:
                number: 80
